# spych

./: README.md  pyproject.toml
.claude/: settings.local.json
doc_template/: module.html.jinja2
docs/1.0.0/: spych.html
docs/1.0.0/spych/: core.html  utils.html  wake.html
docs/2.0.2/: spych.html
docs/2.0.2/spych/: agents.html  core.html  responders.html  wake.html
docs/3.0.0/: index.html  search.js  spych.html
docs/3.0.0/spych/: agents.html  core.html  responders.html  utils.html  wake.html
docs/3.0.0/spych/agents/: claude.html  ollama.html
docs/spych/agents/: ollama.html
spych/: __init__.py  cli.py  core.py  responders.py  wake.py
spych/agents/: __init__.py  claude.py  ollama.py
spych/agents/sdk_workers/: claude_sdk_worker.py
test/: 02_ollama.py  03_claude.py  04_custom_responder.py  06_multi_agent.py
utils/: docs.sh
