[tool.black]
line-length = 80
target-version = ['py39']
exclude = '/.*(__pycache__).*/'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spych"
version = "3.1.0"
description = "Communicate with your favorite AI model by talking to it."
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
dependencies = [
    "claude_agent_sdk>=0.1.45,<1.0.0",
    "faster-whisper>=1.2.1,<2.0.0",
    "pvrecorder>=1.2.7,<2.0.0",
    "numpy>=2.4.2,<3.0.0",
    "requests>=2.32.5,<3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/connor-makowski/spych"
"Bug Tracker" = "https://github.com/connor-makowski/spych/issues"
"Documentation" = "https://connor-makowski.github.io/spych/spych/index.html"